--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,51 @@ border: solid red 2px;
 .workDiv{
 display: inline-block;
 }
+
+
+.title, .title1 {
+    font-size: 3rem;
+    font-family: "PlayfairDisplaySC-Bold";
+  }
+  
+  .title1 {
+    color: #151515;
+  }
+  
+  .footer {
+    height: 7.25rem;
+    background-color: #f4f4f4;
+  }
+  
+  .bi-instagram {
+    font-size: 1.3rem;
+  }
+  
+  .bi-github {
+    font-size: 1.3rem;
+  }
+  
+  .bi-discord {
+    font-size: 1.3rem;
+  }
+  
+  .bi-slack {
+    font-size: 1.3rem;
+  }
+  
+  .bi-youtube {
+    font-size: 1.3rem;
+  }
+  
+  .section03 {
+    position: relative;
+    top: 2.3rem;
+  }
+  
+  .section04 {
+    width: 100%;
+  }
+  
+  .text {
+    color: #bc694e;
+  }
