--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
 .container{
     display: flex;
     justify-content: center;
+  
+}
+.container2{
+    flex-direction: column;
+    
 }
 .center {
     position: relative;
@@ -49,13 +54,13 @@ height: auto;
 padding-top: 5rem;
 background-position: center center;
 background-size: cover;
-border: solid red 2px;
+
 
 }
 .first-section-content {
 max-width: 100%;
 height: auto;
-border: solid blue 2px;
+
 }
 h1{
     text-transform: capitalize;
@@ -76,10 +81,10 @@ color: #848484;
 color: #333333;
 }
 #chose{
-border: solid green 2px;
+
 }
 #EXP1{
-border: solid red 2px;
+
 margin-top: 5%;
 }
 .workDiv h2 {
@@ -88,7 +93,7 @@ display: inline-block;
 }
 .workDiv i {
 font-size: 24px;
-border: solid red 2px;
+
 }
 .workDiv{
 display: inline-block;
@@ -140,4 +145,135 @@ display: inline-block;
   
   .text {
     color: #bc694e;
+    font-size: 35px !important;
+    font-weight:500;
+  }
+  .text1{
+    color: #4f4f4f;
+    font-weight: bold;
+  }
+  .jobTitle h1{
+    margin-left:4%;
+  }
+  .jobTitle{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+  }
+  .jobTitle .div1{
+    display: flex;
+    flex-direction: column;
+  }
+  .flex1 i {
+    font-size: 35px;
+  }
+  .flex1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: solid red 2px;
+    
+  }
+  .flex1 h1{
+    position: relative;
+    right: 19%;
+  }
+   .iWork {
+    
+    position: relative;
+    right: 20%;
+  }
+  .tx{
+    font-weight: normal;
+  }
+  
+  
+.workTitle {
+    font-size: 35px;
+    letter-spacing: -1px;
+    line-height: 41px;
+    color: #bc694e;
+    font-weight: 700;
+    font-family: "Playfair Display SC";
+    margin-top: 130px;
+  }
+  
+  .bagIcon {
+    margin-top: 140px;
+    font-size: 35px;
+    color: #333333;
+  }
+  
+  .date {
+    font-size: 24px;
+    line-height: 25px;
+    color: #848484;
+    font-weight: 400;
+    font-family: "Lato";
+    margin-top: 20px;
+  }
+  
+  .experience {
+    font-size: 30px;
+    line-height: 25px;
+    color: #4f4f4f;
+    font-weight: 700;
+    font-family: "Lato";
+    margin-top: 10px;
+  }
+  
+  .position {
+    font-size: 18px;
+    line-height: 25px;
+    color: #848484;
+    font-weight: 400;
+    font-family: "Lato";
+    margin-rop: 10px;
+  }
+  
+  .awardText {
+    font-size: 24px;
+    line-height: 28px;
+    color: #4f4f4f;
+    font-weight: 400;
+    font-family: "Lato";
+    margin-top: 20px;
+  }
+  
+  .backgroundImage {
+    background-image: url("../images/background.png");
+    height: 440px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .backgroundText {
+    font-size: 35px;
+    line-height: 42px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Playfair Display SC";
+    padding: 20px;
+    padding-left: 35px;
+    border: 3px solid white;
+    width: 600px;
+    height: 140px;
+    margin-top: 30px;
+  }
+  
+  .footerBackground {
+    height: 130px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .copyright {
+    font-size: 18px;
+    line-height: 0px;
+    color: #141414;
+    font-weight: 400;
+    font-family: "Lato";
+    text-align: left;
   }
