--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@
 .navbar 
 	background: #f4f4f4 
 .navbar-brand 
-	background-color: #ffffff 
+	background-color: $color1 
 	height: 7.625rem 
 	width: 7.625rem 
 .navbar-toggler 
