--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,4 @@
 .container 
-	border: solid red 2px 
 .container2 
 	flex-direction: column 
 .center 
@@ -65,7 +64,6 @@ h1
 .workDiv 
 	display: inline-block 
 	h2 
-		border: solid black 2px 
 		display: inline-block 
 	i 
 		font-size: 24px 
@@ -76,7 +74,7 @@ h1
 	color: #151515 
 .footer 
 	height: 7.25rem 
-	background-color: #f4f4f4 
+	background-color: $color2 
 .section03 
 	position: relative 
 	top: 2.3rem 
@@ -102,7 +100,6 @@ h1
 	display: flex 
 	flex-direction: row 
 	align-items: center 
-	border: solid red 2px 
 	i 
 		font-size: 35px 
 	h1 
